add vehicle and bid structure
