# src/schema/vehicle-schema.js
@@ -1,0 +1,80 @@
+"use strict";
+
+module.exports.vehiclesPost = {
+  headers: {
+    type: "object",
+    properties: {
+      Authorization: { type: "string" }
+    },
+    required: ["Authorization"]
+  },
+
+  body: {
+    type: "object",
+    properties: {
+      brand: { type: "string" },
+      model: { type: "string" },
+      year: { type: "number" },
+      odometer: { type: "number" },
+      color: { type: "string" }
+    },
+    required: ["brand", "model", "year", "odometer", "color"],
+    additionalProperties: false
+  }
+};
+
+module.exports.vehiclesGet = {
+  headers: {
+    type: "object",
+    properties: {
+      Authorization: { type: "string" }
+    },
+    required: ["Authorization"]
+  },
+
+  querystring: {
+    brand: { type: "string" }
+  },
+
+  response: {
+    200: {
+      type: "array",
+      items: {
+        type: "object",
+        properties: {
+          id: { type: "number" },
+          brand: { type: "string" },
+          model: { type: "string" },
+          year: { type: "number" }
+        },
+        required: ["id", "brand", "model", "year"]
+      }
+    }
+  }
+};
+
+module.exports.meVehiclesGet = {
+  headers: {
+    type: "object",
+    properties: {
+      Authorization: { type: "string" }
+    },
+    required: ["Authorization"]
+  },
+
+  response: {
+    200: {
+      type: "array",
+      items: {
+        type: "object",
+        properties: {
+          id: { type: "number" },
+          brand: { type: "string" },
+          model: { type: "string" },
+          year: { type: "number" }
+        },
+        required: ["id", "brand", "model", "year"]
+      }
+    }
+  }
+};
